Add ability to set LDAP flag for deregistering user & remove bulk import's salt requirement